--- a/up/index.html
+++ b/up/index.html
@@ -10,7 +10,14 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+      integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script defer src="./app/app.js"></script>
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
@@ -20,7 +27,9 @@
     <header class="header">
       <img src="./img/logo.png" alt="company logo" class="header__logo" />
       <h3 class="heading-3">Your own home:</h3>
-      <h1 class="heading-1">The ultimate personal freedom</h1>
+      <h1 class="heading-1">
+        <span class="span-h1">The ultimate personal freedom</span>
+      </h1>
       <button class="btn header__btn">View our properties</button>
 
       <div class="header__seenon--text">Seen on</div>
@@ -405,7 +414,7 @@
         </li>
       </ul>
       <p class="copyright">
-        &copy; Copyright 2022 by Trillo. Lorem ipsum dolor sit amet consectetur
+        &copy; Copyright 2022 by Nexter. Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Repudiandae, illo. Lorem ipsum, dolor sit amet
         consectetur adipisicing elit. Dolores, illum.
       </p>
