--- a/up/index.html
+++ b/up/index.html
@@ -26,7 +26,7 @@
     </div>
     <header class="header">
       <img src="./img/logo.png" alt="company logo" class="header__logo" />
-      <h3 class="heading-3">Your own home:</h3>
+      <h3 class="heading-3"><span class="span-h3">Your own home:</span></h3>
       <h1 class="heading-1">
         <span class="span-h1">The ultimate personal freedom</span>
       </h1>
